# twitch-idle-bot

./: .gitignore  README.md  compose.yml  dockerfile  pyproject.toml
src/: heartbeat.py  main.py
src/config/: settings.py
src/twitch/: twitch_auth.py  twitch_client.py
src/twitch/controllers/: auth_controller.py
src/twitch/exceptions/: __init__.py  auth_service.py  base.py
src/twitch/services/: auth_service.py
tests/: test_heartbeat.py  test_twitch_client.py
