[project]
name = "twitch-idle-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "litestar[standard]>=2.17.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "twitchapi>=4.5.0",
]
